# esp32-ICS-43434

./: .gitignore
esp/: Cargo.toml  README.md  sdkconfig.defaults
esp/.cargo/: config.toml
esp/src/: main.rs
pc_tool/: Cargo.toml
pc_tool/src/: main.rs
