[package]
name = "esp32-rust-minimal"
version = "0.1.0"
edition = "2021"
#resolver = "1"


[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"


[dependencies]
anyhow = "1.0.95"
embedded-graphics = "0.8.1"
esp-idf-hal = "0.45.2"
esp-idf-svc = "0.51"
log = "0.4.25"
rustfft = "6.2.0"
ssd1306 = "0.9.0"

[build-dependencies]
embuild = { version = "0.33", features = ["elf"] }
